bk_ida/gccida/g0/size_int_type_wide
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2429:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *t; // [rsp+10h] [rbp-10h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2432:7: error: use of undeclared identifier 'size_htab_9'; did you mean 'size_htab_eq'?
if ( !size_htab_9 ) 
      ^~~~~~~~~~~
      size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2434:1: error: use of undeclared identifier 'size_htab_9'
size_htab_9 = htab_create( 0x400uLL, ( htab_hash)size_htab_hash, ( htab_eq)size_htab_eq, 0LL); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2435:25: error: use of undeclared identifier 'size_htab_9'; did you mean 'size_htab_eq'?
ggc_add_deletable_htab( size_htab_9, 0LL, 0LL); 
                        ^~~~~~~~~~~
                        size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2436:1: error: use of undeclared identifier 'new_const_8'
new_const_8 = make_node( INTEGER_CST); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2437:21: error: use of undeclared identifier 'new_const_8'
ggc_add_tree_root( &new_const_8, 1); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2439:1: error: use of undeclared identifier 'new_const_8'
new_const_8->int_cst.int_cst.low = number; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2444:1: error: use of undeclared identifier 'new_const_8'
new_const_8->int_cst.int_cst.high = v2; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2445:1: error: use of undeclared identifier 'new_const_8'
new_const_8->common.type = type; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2446:22: error: use of undeclared identifier 'new_const_8'
v3 = force_fit_type( new_const_8, 0); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2447:6: error: use of undeclared identifier 'new_const_8'
v4 = new_const_8; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2448:15: error: use of undeclared identifier 'new_const_8'
*( ( _BYTE *)&new_const_8->block.common + 18) = ( 4 * ( v3 & 1)) | *( ( _BYTE *)&new_const_8->block.common + 18) & 0xFB; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2448:82: error: use of undeclared identifier 'new_const_8'
*( ( _BYTE *)&new_const_8->block.common + 18) = ( 4 * ( v3 & 1)) | *( ( _BYTE *)&new_const_8->block.common + 18) & 0xFB; 
                                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2449:15: error: use of undeclared identifier 'new_const_8'
*( ( _BYTE *)&new_const_8->block.common + 18) = ( 8 * ( ( *( ( _BYTE *)&v4->block.common + 18) & 4) != 0)) | *( ( _BYTE *)&new_const_8->block.common + 18) & 0xF7; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2449:124: error: use of undeclared identifier 'new_const_8'
*( ( _BYTE *)&new_const_8->block.common + 18) = ( 8 * ( ( *( ( _BYTE *)&v4->block.common + 18) & 4) != 0)) | *( ( _BYTE *)&new_const_8->block.common + 18) & 0xF7; 
                                                                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2450:24: error: use of undeclared identifier 'size_htab_9'
slot = htab_find_slot( size_htab_9, new_const_8, INSERT); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2450:37: error: use of undeclared identifier 'new_const_8'
slot = htab_find_slot( size_htab_9, new_const_8, INSERT); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2453:5: error: use of undeclared identifier 'new_const_8'
t = new_const_8; 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/fold-const.c:2454:9: error: use of undeclared identifier 'new_const_8'
*slot = new_const_8; 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/size_int_type_wide/src/obj/fold-const.o] Error 1
